# Market-data-feed-handler

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REPOSITORY_ANALYSIS.md  build.sh  conanfile.txt
benchmarks/: CMakeLists.txt  benchmark_circular_buffer.cpp  benchmark_latency.cpp
examples/: CMakeLists.txt  simple_example.cpp
include/market_data/core/: common.hpp  market_event.hpp
include/market_data/lockfree/: circular_buffer.hpp  mpmc_queue.hpp
include/market_data/memory/: memory_pool.hpp
include/market_data/metrics/: latency_tracker.hpp
include/market_data/protocol/: protocol_parser.hpp
include/market_data/threading/: thread_utils.hpp
include/market_data/utils/: timestamp.hpp
src/: main.cpp
src/core/: market_event.cpp
src/memory/: memory_pool.cpp
src/metrics/: latency_tracker.cpp
src/threading/: thread_utils.cpp
src/utils/: timestamp.cpp
tests/: CMakeLists.txt  test_circular_buffer.cpp  test_memory_pool.cpp  test_mpmc_queue.cpp
